# wav-revival-lib

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  bootstrap.bat  build.py  build_config.json  requirements.txt
ci/appveyor/: configure.bat
ci/travis/: build-windows.bat  build-windows.sh  configure-linux.sh  configure-windows.bat  configure-windows.sh  install-linux.sh  install-osx.sh  install-windows.sh
pybuild/: build.config.json  helpers.py
src/lib/c/tiny_test/: test_utils.c  test_utils.h
src/main/c/: api.h  domain.h  util.h
src/main/c/api/: double_array_api.h  double_array_api_impl.c  sample_count_array_api.h  sample_count_array_api_impl.c  uint64_array_api.h  uint64_array_api_impl.c  wav_file.cpp  wav_file_api.h  wav_file_api_impl.c
src/main/c/domain/: compressed_data.h  compressed_data.hpp  double_array.h  sample_count_array.h  uint64_array.h  wav_compressed_data.h  wav_file.h  wav_file.hpp  wav_header.h
src/main/c/export/: wav-revival-lib.c  wav_revival.c  wav_revival.cpp  wav_revival.h
src/main/c/globals/: export.h
src/main/c/macros/: export.h  export_end.h  export_start.h
src/main/c/util/: decibel_utils.c  decibel_utils.h  decibel_utils.hpp  decibel_utils_impl.c  signal_fading_utils.c  signal_fading_utils.h  signal_fading_utils.hpp  signal_fading_utils_impl.c  wav_compressing_utils.c  wav_compressing_utils.h  wav_compressing_utils.hpp  wav_compressing_utils_impl.c
src/test/c/: test_runner.c
src/test/c/api/: double_array_api_impl_test.c  double_array_api_impl_test.cpp  double_array_api_impl_test.h  sample_count_array_api_impl_test.c  sample_count_array_api_impl_test.h  uint64_array_api_impl_test.c  uint64_array_api_impl_test.cpp  uint64_array_api_impl_test.h
src/test/c/exportttt/: wav_revival_lib_alpha_test.c  wav_revival_lib_alpha_test.h
src/test/c/lib/: test_utils.c  test_utils.h
src/test/c/util/: decibel_utils_test.c  decibel_utils_test.cpp  decibel_utils_test.h  signal_fading_utils_test.c  signal_fading_utils_test.cpp  signal_fading_utils_test.h  wav_compressing_utils_test.c  wav_compressing_utils_test.cpp  wav_compressing_utils_test.h
